# C610-smarttraffic-demo

./: README.docx  README.md
doc/: C610-SmartTraffic-doc.docx  Video description.txt
smarttraffic/: CMakeLists.txt  layer.conf  smarttraffic_0.1.bb
smarttraffic/include/easypr/core/: SNPEPlate.hpp  chars_recognise.h
smarttraffic/resources/image/native_test/: GroundTruth_others.xml
smarttraffic/resources/result/: plateGroundTruth.txt
smarttraffic/snpe/: README.md
smarttraffic/src/core/: SNPEPlate.cpp
smarttraffic/test/: accuracy.hpp  plate.hpp
